kerangka section web

--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@
 		<title>Travelin</title>
 	</head>
 	<body>
+		<!-- NAVBAR -->
+		<nav class="navbar"></nav>
+
+		<!-- HOME/HERO -->
+		<section aria-label="my-hero" class="hero"></section>
+
+		<!-- FORM -->
+		<form class="form-search"></form>
+
+		<!-- FITUR UTAMA -->
+		<section aria-label="my-features" class="fitur-utama"></section>
+
+		<!-- TOP LOKASI -->
+		<section aria-label="my-top-place" class="top-lokasi"></section>
+
+		<!-- PAKET TUR -->
+		<section aria-label="my-package" class="paket-tur"></section>
+
+		<!-- TOP HARGA -->
+		<section aria-label="my-deals" class="top-harga"></section>
+
+		<!-- TESTIMONI -->
+		<section aria-label="my-testimonial" class="testimoni"></section>
+
+		<!-- PAKET TRENDING -->
+		<section aria-label="my-trending" class="paket-trending"></section>
+
+		<!-- TUR GUIDE -->
+		<section aria-label="my-tourguide" class="tur-guide"></section>
+
+		<!-- ARTIKEL -->
+		<section aria-label="my-article" class="artikel"></section>
+
+		<!-- PARTNER -->
+		<section aria-label="my-partners" class="partner"></section>
+
+		<footer></footer>
+
 		<!-- JS LINK -->
 		<script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
 		<script src="assets/node_modules/jquery/dist/jquery.min.js"></script>
