--- a/index.html
+++ b/index.html
@@ -1,60 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="assets/fontawesome-free-6.6.0-web/css/all.min.css" />
-		<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick.css" />
-		<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick-theme.css" />
-		<link rel="stylesheet" href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/style.css" />
-		<title>Travelin</title>
-	</head>
-	<body>
-		<!-- NAVBAR -->
-		<nav class="navbar"></nav>
 
-		<!-- HOME/HERO -->
-		<section aria-label="my-hero" class="hero"></section>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="assets/fontawesome-free-6.6.0-web/css/all.min.css" />
+	<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick.css" />
+	<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick-theme.css" />
+	<link rel="stylesheet" href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
+	<title>Travelin</title>
+</head>
 
-		<!-- FORM -->
-		<form class="form-search"></form>
+<body>
 
-		<!-- FITUR UTAMA -->
-		<section aria-label="my-features" class="fitur-utama"></section>
+	<!-- TUR GUIDE -->
+	<section aria-label="my-tourguide" class="tur-guide">
+		<div class="text-center">
+			<h5 class="warnatur-guide">Tour Guide</h5>
+			<h2>Meet Our <span class="Judultur-guide">Excellent Guides</span> </h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+		</div>
+		<div class="autoplay">
+			<div class="card mx-3">
+				<img src="assets/img/img1.jpg" class="card-img-top" alt="...">
+				<div class="card-body text-center">
+					<h5 class="card-title">Salmon Thuir</h5>
+					<p class="card-text">Senior Agent</p>
+				</div>
+			</div>
+			<div class="card mx-3">
+				<img src="assets/img/img2.jpg" class="card-img-top" alt="...">
+				<div class="card-body text-center">
+					<h5 class="card-title">Horke Pels</h5>
+					<p class="card-text">Head Officer</p>
+				</div>
+			</div>
+			<div class="card mx-3">
+				<img src="assets/img/img4.jpg" class="card-img-top" alt="...">
+				<div class="card-body text-center">
+					<h5 class="card-title">Sorden Kalos</h5>
+					<p class="card-text">Supervisor</p>
+				</div>
+			</div>
+			<div class="card mx-3">
+				<img src="assets/img/img3 (1).jpg" class="card-img-top" alt="...">
+				<div class="card-body text-center">
+					<h5 class="card-title">Nelson Bam</h5>
+					<p class="card-text">Quality Assurance</p>
+				</div>
+			</div>
+			<div class="card mx-3">
+				<img src="assets/img/img4.jpg" class="card-img-top" alt="...">
+				<div class="card-body text-center">
+					<h5 class="card-title">Cacics Coold</h5>
+					<p class="card-text">Asst.Manager</p>
+				</div>
+			</div>
+		</div>
 
-		<!-- TOP LOKASI -->
-		<section aria-label="my-top-place" class="top-lokasi"></section>
+	</section>
 
-		<!-- PAKET TUR -->
-		<section aria-label="my-package" class="paket-tur"></section>
+	<!-- ARTIKEL -->
+	<section aria-label="my-article" class="artikel">
 
-		<!-- TOP HARGA -->
-		<section aria-label="my-deals" class="top-harga"></section>
+	</section>
 
-		<!-- TESTIMONI -->
-		<section aria-label="my-testimonial" class="testimoni"></section>
+	<!-- PARTNER -->
+	<section aria-label="my-partners" class="partner">
 
-		<!-- PAKET TRENDING -->
-		<section aria-label="my-trending" class="paket-trending"></section>
+	</section>
 
-		<!-- TUR GUIDE -->
-		<section aria-label="my-tourguide" class="tur-guide"></section>
+	<!-- JS LINK -->
+	<script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
+	<script src="assets/node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="assets/node_modules/slick-carousel/slick/slick.min.js"></script>
+	<script src="assets/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+	<script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="js/script.js"></script>
+</body>
 
-		<!-- ARTIKEL -->
-		<section aria-label="my-article" class="artikel"></section>
-
-		<!-- PARTNER -->
-		<section aria-label="my-partners" class="partner"></section>
-
-		<footer></footer>
-
-		<!-- JS LINK -->
-		<script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
-		<script src="assets/node_modules/jquery/dist/jquery.min.js"></script>
-		<script src="assets/node_modules/slick-carousel/slick/slick.min.js"></script>
-		<script src="assets/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-		<script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="js/script.js"></script>
-	</body>
 </html>
