keweh je dropdwn ne

--- a/index.html
+++ b/index.html
@@ -8,11 +8,290 @@
 		<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick-theme.css" />
 		<link rel="stylesheet" href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="scss/custom.css" />
 		<title>Travelin</title>
 	</head>
 	<body>
 		<!-- NAVBAR -->
-		<nav class="navbar"></nav>
+		<nav class="navbar navbar-expand-lg">
+			<div class="container">
+				<a class="navbar-brand" href="#"><img src="assets/img/logo (1).png" alt="" /></a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+						<li class="nav-item dropdown">
+							<a
+								class="nav-link dropdown-toggle"
+								href="#"
+								role="button"
+								data-bs-toggle="dropdown"
+								data-bs-auto-close="outside"
+								aria-expanded="false">
+								HOME
+							</a>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" href="#">Homepage Default</a></li>
+								<li><a class="dropdown-item" href="#">Homepage 1</a></li>
+								<li><a class="dropdown-item" href="#">Homepage 2</a></li>
+								<li><a class="dropdown-item" href="#">Homepage 3</a></li>
+								<li><a class="dropdown-item" href="#">Homepage 4</a></li>
+								<li><a class="dropdown-item" href="#">Homepage 5</a></li>
+								<li class="dropend">
+									<a
+										class="dropdown-item"
+										role="button"
+										data-bs-toggle="dropdown"
+										data-bs-auto-close="outside"
+										aria-expanded="false"
+										href="#"
+										>Flag &raquo;
+									</a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Flag Homepage</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Flag Grid</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Flag List</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Flag Detail</a>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a class="dropdown-item item-active" href="#">Cars &raquo; </a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Car Homepage</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Car Grid</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Car List</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Car Detail</a>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a class="dropdown-item" href="#"> Cruise &raquo; </a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Cruise Homepage</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Cruise Grid</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Cruise List</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Cruise Detail</a>
+										</li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">ABOUT US</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a
+								class="nav-link dropdown-toggle"
+								href="#"
+								role="button"
+								data-bs-toggle="dropdown"
+								aria-expanded="false">
+								DESTINATION
+							</a>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" href="#">Destination List</a></li>
+								<li><a class="dropdown-item" href="#">Destination Detail</a></li>
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
+							<a
+								class="nav-link dropdown-toggle"
+								href="#"
+								role="button"
+								data-bs-toggle="dropdown"
+								aria-expanded="false">
+								TOURS
+							</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a class="dropdown-item" href="#"> Tour List &raquo; </a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Tour List Left Sidebar</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Tour List Right Sidebar</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Tour List Full Width</a>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a class="dropdown-item" href="#"> Tour Grid &raquo; </a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Tour List Left Sidebar</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Tour List Right Sidebar</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Tour List Full Width</a>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a class="dropdown-item" href="#"> Tour Single &raquo; </a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Tour List Left Sidebar</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Tour List Right Sidebar</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Tour List Full Width</a>
+										</li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
+							<a
+								class="nav-link dropdown-toggle"
+								href="#"
+								role="button"
+								data-bs-toggle="dropdown"
+								aria-expanded="false">
+								PAGES
+							</a>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" href="#">Our Guide</a></li>
+								<li><a class="dropdown-item" href="#">Booking</a></li>
+								<li><a class="dropdown-item" href="#">Confirmation</a></li>
+								<li>
+									<a class="dropdown-item" href="#"> Services &raquo; </a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Service List</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Service Detail</a>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a class="dropdown-item" href="#"> Gallery &raquo; </a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Gallery</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Gallery Masonry</a>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a class="dropdown-item" href="#"> Error &raquo; </a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Erorr Page 1</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Erorr Page 2</a>
+										</li>
+									</ul>
+								</li>
+								<li><a class="dropdown-item" href="#">Login|Registern</a></li>
+								<li><a class="dropdown-item" href="#">Testimonials</a></li>
+								<li><a class="dropdown-item" href="#">FAQ</a></li>
+								<li><a class="dropdown-item" href="#">Contact Us</a></li>
+								<li><a class="dropdown-item" href="#">Dashboard</a></li>
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
+							<a
+								class="nav-link dropdown-toggle"
+								href="#"
+								role="button"
+								data-bs-toggle="dropdown"
+								aria-expanded="false">
+								BLOG
+							</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a class="dropdown-item" href="#"> Blog Grid &raquo; </a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Blog Grid 1</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Blog Grid 2</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Blog Grid 3</a>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a class="dropdown-item" href="#"> Blog List &raquo; </a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Blog List 1</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Blog List 2</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Blog List 3</a>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a class="dropdown-item" href="#"> Blog Single &raquo; </a>
+									<ul class="dropdown-menu dropdown__submenu">
+										<li>
+											<a class="dropdown-item" href="#">Blog Single 1</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Blog Single 2</a>
+										</li>
+										<li>
+											<a class="dropdown-item" href="#">Blog Single 3</a>
+										</li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+					</ul>
+					<form class="d-flex align-items-center gap-3" role="search">
+						<a href="" class="mb-0 link-dark text-decoration-none">LOGIN/REGISTER</a>
+						<button class="btn btn-primary text-white" type="submit">BOOK NOW</button>
+					</form>
+				</div>
+			</div>
+		</nav>
 
 		<!-- HOME/HERO -->
 		<section aria-label="my-hero" class="hero"></section>
