kayakne nyak gambarne

--- a/index.html
+++ b/index.html
@@ -1,166 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="assets/fontawesome-free-6.6.0-web/css/all.min.css" />
+		<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick.css" />
+		<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick-theme.css" />
+		<link rel="stylesheet" href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<title>Travelin</title>
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="assets/fontawesome-free-6.6.0-web/css/all.min.css" />
-	<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick.css" />
-	<link rel="stylesheet" href="assets/node_modules/slick-carousel/slick/slick-theme.css" />
-	<link rel="stylesheet" href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/style.css" />
-	<title>Travelin</title>
-</head>
-
-<body>
-
-	<!-- TOP LOKASI -->
-	<section aria-label="my-top-place" class="top-lokasi">
-		<div>
-			<p>Top Destinations</p>
-			<h1>Explore Top Destinations</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-		</div>
-
-		<div class="kumpulangambar row">
-			<div class="col-md-8">
-				<div class="kotak">
-					<img src="assets/img/destination2.jpg" alt="" srcset="">
-					<p>Italy</p>
-					<h6>Caspian Valley</h6>
-					<span>18 Tours</span>
-				</div>
-				<div class="d-flex ">
-					<div class="kotak">
-						<img src="assets/img/destination15.jpg" alt="" srcset="">
-						<p>Moscow</p>
-						<h6>Russia</h6>
-						<span>15 Tours</span>
-					</div>
-					<div class="kotak">
-						<img src="assets/img/destination16.jpg" alt="" srcset="">
-						<p>Florida</p>
-						<h6>America</h6>
-						<span>32 Tours</span>
-					</div>
-				</div>
+	<body>
+		<!-- TOP LOKASI -->
+		<section aria-label="my-top-place" class="top-lokasi">
+			<div>
+				<p>Top Destinations</p>
+				<h1>Explore Top Destinations</h1>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+					incididunt ut labore.
+				</p>
 			</div>
-			<div class="col-md-4 kotak">
-				<img src="assets/img/destination1.jpg" alt="" srcset="">
-				<p>England</p>
-				<h6>London</h6>
-				<span>15 Tours</span>
-			</div>
-		</div>
 
-
-	</section>
-
-	<!-- PAKET TUR -->
-	<section aria-label="my-package" class="paket-tur">
-		<div>
-			<p>Top Pick</p>
-			<h1>Best Tour Packages</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-		</div>
-
-		<div class="d-flex gap-3">
-			<div class="card" style="width: 18rem;">
-				<img src="assets/img/trending3.jpg" class="card-img-top" alt="...">
-				<div class="hari d-flex">
-					<i class="fa-solid fa-calendar-days"></i>
-					<h5>9 days Tour</h5>
-				</div>
-				<div class="card-body">
-					<p>Greeee</p>
-					<h5 class="card-title">Santorini,Oia</h5>
-					<div class="bintang d-flex">
-						<div>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
+			<div class="kumpulangambar container">
+				<div class="row">
+					<div class="col-md-7 row">
+						<div class="kotak col-md-12">
+							<img src="assets/img/destination2.jpg" alt="" srcset="" />
+							<div class="top-lokasi-txt">
+								<p>Italy</p>
+								<h6>Caspian Valley</h6>
+								<span>18 Tours</span>
+							</div>
 						</div>
-						<p>(38)</p>
-					</div>
-					<p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-
-					<div class="harga d-flex">
-						<h6>$180.00</h6>
-						<p>per person</p>
-					</div>
-				</div>
-
-			</div>
-			<div class="card" style="width: 18rem;">
-				<img src="assets/img/trending4.jpg" class="card-img-top" alt="...">
-				<div class="hari d-flex">
-					<i class="fa-solid fa-calendar-days"></i>
-					<h5>9 days Tour</h5>
-				</div>
-				<div class="card-body">
-					<p>maldives</p>
-					<h5 class="card-title">Hurawalhi island</h5>
-					<div class="bintang d-flex">
-						<div>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
+						<div class="d-flex col-md-12 gap-2">
+							<div class="kotak">
+								<img src="assets/img/destination15.jpg" alt="" srcset="" />
+								<div class="top-lokasi-txt">
+									<p>Moscow</p>
+									<h6>Russia</h6>
+									<span>15 Tours</span>
+								</div>
+							</div>
+							<div class="kotak">
+								<img src="assets/img/destination16.jpg" alt="" srcset="" />
+								<div class="top-lokasi-txt">
+									<p>Florida</p>
+									<h6>America</h6>
+									<span>32 Tours</span>
+								</div>
+							</div>
 						</div>
-						<p>(18)</p>
 					</div>
-					<p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-
-					<div class="harga d-flex">
-						<h6>$260.00</h6>
-						<p>per person</p>
-					</div>
-				</div>
-
-			</div>
-			<div class="card" style="width: 18rem;">
-				<img src="assets/img/2.jpg" class="card-img-top" alt="...">
-				<div class="hari d-flex">
-					<i class="fa-solid fa-calendar-days"></i>
-					<h5>5 days Tour</h5>
-				</div>
-				<div class="card-body">
-					<p>Greeee</p>
-					<h5 class="card-title">Santorini,Oia</h5>
-					<div class="bintang d-flex">
-						<div>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
+					<div class="col-md-5 kotak">
+						<img src="assets/img/destination1.jpg" alt="" srcset="" />
+						<div class="top-lokasi-txt">
+							<p>England</p>
+							<h6>London</h6>
+							<span>15 Tours</span>
 						</div>
-						<p>(18)</p>
-					</div>
-					<p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-
-					<div class="harga d-flex">
-						<h6>$260.00</h6>
-						<p>per person</p>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
 
-	<!-- TOP HARGA -->
-	<section aria-label="my-deals" class="top-harga"></section>
+		<!-- PAKET TUR -->
+		<section aria-label="my-package" class="paket-tur">
+			<div>
+				<p>Top Pick</p>
+				<h1>Best Tour Packages</h1>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+					incididunt ut labore.
+				</p>
+			</div>
 
-	<!-- JS LINK -->
-	<script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
-	<script src="assets/node_modules/jquery/dist/jquery.min.js"></script>
-	<script src="assets/node_modules/slick-carousel/slick/slick.min.js"></script>
-	<script src="assets/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-	<script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
-</body>
+			<div class="d-flex gap-3">
+				<div class="card" style="width: 18rem">
+					<img src="assets/img/trending3.jpg" class="card-img-top" alt="..." />
+					<div class="hari d-flex">
+						<i class="fa-solid fa-calendar-days"></i>
+						<h5>9 days Tour</h5>
+					</div>
+					<div class="card-body">
+						<p>Greeee</p>
+						<h5 class="card-title">Santorini,Oia</h5>
+						<div class="bintang d-flex">
+							<div>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+							</div>
+							<p>(38)</p>
+						</div>
+						<p class="card-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+						</p>
 
+						<div class="harga d-flex">
+							<h6>$180.00</h6>
+							<p>per person</p>
+						</div>
+					</div>
+				</div>
+				<div class="card" style="width: 18rem">
+					<img src="assets/img/trending4.jpg" class="card-img-top" alt="..." />
+					<div class="hari d-flex">
+						<i class="fa-solid fa-calendar-days"></i>
+						<h5>9 days Tour</h5>
+					</div>
+					<div class="card-body">
+						<p>maldives</p>
+						<h5 class="card-title">Hurawalhi island</h5>
+						<div class="bintang d-flex">
+							<div>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+							</div>
+							<p>(18)</p>
+						</div>
+						<p class="card-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+						</p>
+
+						<div class="harga d-flex">
+							<h6>$260.00</h6>
+							<p>per person</p>
+						</div>
+					</div>
+				</div>
+				<div class="card" style="width: 18rem">
+					<img src="assets/img/2.jpg" class="card-img-top" alt="..." />
+					<div class="hari d-flex">
+						<i class="fa-solid fa-calendar-days"></i>
+						<h5>5 days Tour</h5>
+					</div>
+					<div class="card-body">
+						<p>Greeee</p>
+						<h5 class="card-title">Santorini,Oia</h5>
+						<div class="bintang d-flex">
+							<div>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+								<span class="fa-solid fa-star"></span>
+							</div>
+							<p>(18)</p>
+						</div>
+						<p class="card-text">
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+						</p>
+
+						<div class="harga d-flex">
+							<h6>$260.00</h6>
+							<p>per person</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- TOP HARGA -->
+		<section aria-label="my-deals" class="top-harga"></section>
+
+		<!-- JS LINK -->
+		<script src="assets/fontawesome-free-6.6.0-web/js/all.min.js"></script>
+		<script src="assets/node_modules/jquery/dist/jquery.min.js"></script>
+		<script src="assets/node_modules/slick-carousel/slick/slick.min.js"></script>
+		<script src="assets/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+		<script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="js/script.js"></script>
+	</body>
 </html>
