--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 
 			<div class="kumpulangambar container">
 				<div class="row">
-					<div class="col-md-7 row">
-						<div class="kotak col-md-12">
-							<img src="assets/img/destination2.jpg" alt="" srcset="" />
-							<div class="top-lokasi-txt">
-								<p>Italy</p>
-								<h6>Caspian Valley</h6>
-								<span>18 Tours</span>
+					<div class="col col-md-7">
+						<div class="row">
+							<div class="kotak col-md-12">
+								<img src="assets/img/destination2.jpg" alt="" srcset="" />
+								<div class="top-lokasi-txt">
+									<p>Italy</p>
+									<h6>Caspian Valley</h6>
+									<span>18 Tours</span>
+								</div>
 							</div>
-						</div>
-						<div class="d-flex col-md-12 gap-2">
-							<div class="kotak">
+							<div class="kotak col-md-6">
 								<img src="assets/img/destination15.jpg" alt="" srcset="" />
 								<div class="top-lokasi-txt">
 									<p>Moscow</p>
@@ -43,7 +43,7 @@
 									<span>15 Tours</span>
 								</div>
 							</div>
-							<div class="kotak">
+							<div class="kotak col-md-6">
 								<img src="assets/img/destination16.jpg" alt="" srcset="" />
 								<div class="top-lokasi-txt">
 									<p>Florida</p>
@@ -53,12 +53,14 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-5 kotak">
-						<img src="assets/img/destination1.jpg" alt="" srcset="" />
-						<div class="top-lokasi-txt">
-							<p>England</p>
-							<h6>London</h6>
-							<span>15 Tours</span>
+					<div class="col col-md-5">
+						<div class="kotak">
+							<img src="assets/img/destination1.jpg" alt="" srcset="" />
+							<div class="top-lokasi-txt">
+								<p>England</p>
+								<h6>London</h6>
+								<span>15 Tours</span>
+							</div>
 						</div>
 					</div>
 				</div>
