--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								aria-expanded="false">
 								HOME
 							</a>
-							<ul class="dropdown-menu">
+							<ul class="dropdown-menu dropdown-mainmenu">
 								<li><a class="dropdown-item" href="#">Homepage Default</a></li>
 								<li><a class="dropdown-item" href="#">Homepage 1</a></li>
 								<li><a class="dropdown-item" href="#">Homepage 2</a></li>
@@ -46,15 +46,7 @@
 								<li><a class="dropdown-item" href="#">Homepage 4</a></li>
 								<li><a class="dropdown-item" href="#">Homepage 5</a></li>
 								<li class="dropend">
-									<a
-										class="dropdown-item"
-										role="button"
-										data-bs-toggle="dropdown"
-										data-bs-auto-close="outside"
-										aria-expanded="false"
-										href="#"
-										>Flag &raquo;
-									</a>
+									<a class="dropdown-item" role="button" href="#">Flag &raquo; </a>
 									<ul class="dropdown-menu dropdown__submenu">
 										<li>
 											<a class="dropdown-item" href="#">Flag Homepage</a>
@@ -118,7 +110,7 @@
 								aria-expanded="false">
 								DESTINATION
 							</a>
-							<ul class="dropdown-menu">
+							<ul class="dropdown-menu dropdown-mainmenu">
 								<li><a class="dropdown-item" href="#">Destination List</a></li>
 								<li><a class="dropdown-item" href="#">Destination Detail</a></li>
 							</ul>
@@ -132,7 +124,7 @@
 								aria-expanded="false">
 								TOURS
 							</a>
-							<ul class="dropdown-menu">
+							<ul class="dropdown-menu dropdown-mainmenu">
 								<li>
 									<a class="dropdown-item" href="#"> Tour List &raquo; </a>
 									<ul class="dropdown-menu dropdown__submenu">
@@ -186,7 +178,7 @@
 								aria-expanded="false">
 								PAGES
 							</a>
-							<ul class="dropdown-menu">
+							<ul class="dropdown-menu dropdown-mainmenu">
 								<li><a class="dropdown-item" href="#">Our Guide</a></li>
 								<li><a class="dropdown-item" href="#">Booking</a></li>
 								<li><a class="dropdown-item" href="#">Confirmation</a></li>
@@ -239,7 +231,7 @@
 								aria-expanded="false">
 								BLOG
 							</a>
-							<ul class="dropdown-menu">
+							<ul class="dropdown-menu dropdown-mainmenu">
 								<li>
 									<a class="dropdown-item" href="#"> Blog Grid &raquo; </a>
 									<ul class="dropdown-menu dropdown__submenu">
