--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 			<div class="kumpulangambar container">
 				<div class="row">
-					<div class="col col-md-7">
+					<div class="col col-md-7 d-flex">
 						<div class="row">
 							<div class="kotak col-md-12">
 								<img src="assets/img/destination2.jpg" alt="" srcset="" />
@@ -53,7 +53,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col col-md-5">
+					<div class="col col-md-5 d-flex">
 						<div class="kotak">
 							<img src="assets/img/destination1.jpg" alt="" srcset="" />
 							<div class="top-lokasi-txt">
