--- a/index.html
+++ b/index.html
@@ -10,48 +10,16 @@
 	<link rel="stylesheet" href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/style.css" />
 	<title>Travelin</title>
-</head>
+	. m,l;op[]
+	<div class="col-md-4 kotak">
+		<img src="assets/img/destination1.jpg" alt="" srcset="">
+		<p>England</p>
+		<h6>London</h6>
+		<span>15 Tours</span>
+	</div>
+	<div>
 
-<body>
-
-	<!-- TOP LOKASI -->
-	<section aria-label="my-top-place" class="top-lokasi">
-		<div>
-			<p>Top Destinations</p>
-			<h1>Explore Top Destinations</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-		</div>
-
-		<div class="kumpulangambar row">
-			<div class="col-md-8">
-				<div class="kotak">
-					<img src="assets/img/destination2.jpg" alt="" srcset="">
-					<p>Italy</p>
-					<h6>Caspian Valley</h6>
-					<span>18 Tours</span>
-				</div>
-				<div class="d-flex ">
-					<div class="kotak">
-						<img src="assets/img/destination15.jpg" alt="" srcset="">
-						<p>Moscow</p>
-						<h6>Russia</h6>
-						<span>15 Tours</span>
-					</div>
-					<div class="kotak">
-						<img src="assets/img/destination16.jpg" alt="" srcset="">
-						<p>Florida</p>
-						<h6>America</h6>
-						<span>32 Tours</span>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 kotak">
-				<img src="assets/img/destination1.jpg" alt="" srcset="">
-				<p>England</p>
-				<h6>London</h6>
-				<span>15 Tours</span>
-			</div>
-		</div>
+	</div>
 
 
 	</section>
@@ -147,6 +115,34 @@
 						<p>per person</p>
 					</div>
 				</div>
+
+			</div>
+			<div class="card" style="width: 18rem;">
+				<img src="assets/img/trending2.jpg" class="card-img-top" alt="...">
+				<div class="hari d-flex">
+					<i class="fa-solid fa-calendar-days"></i>
+					<h5>9 days Tour</h5>
+				</div>
+				<div class="card-body">
+					<p>croatia</p>
+					<h5 class="card-title">Piazza Castello</h5>
+					<div class="bintang d-flex">
+						<div>
+							<span class="fa-solid fa-star"></span>
+							<span class="fa-solid fa-star"></span>
+							<span class="fa-solid fa-star"></span>
+							<span class="fa-solid fa-star"></span>
+							<span class="fa-solid fa-star"></span>
+						</div>
+						<p>(12)</p>
+					</div>
+					<p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
+
+					<div class="harga d-flex">
+						<h6>$170.00</h6>
+						<p>per person</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -161,6 +157,6 @@
 	<script src="assets/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
 	<script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
-</body>
+	</body>
 
 </html>
