--- a/index.html
+++ b/index.html
@@ -21,37 +21,47 @@
 			<h2>Meet Our <span class="Judultur-guide">Excellent Guides</span> </h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
 		</div>
-		<div class="autoplay">
+		<div class="autoplay container">
 			<div class="card mx-3">
-				<img src="assets/img/img1.jpg" class="card-img-top" alt="...">
+				<div class="img-hover">
+					<img src="assets/img/img1.jpg" class="card-img-top" alt="...">
+				</div>
 				<div class="card-body text-center">
 					<h5 class="card-title">Salmon Thuir</h5>
 					<p class="card-text">Senior Agent</p>
 				</div>
 			</div>
 			<div class="card mx-3">
-				<img src="assets/img/img2.jpg" class="card-img-top" alt="...">
+				<div class="img-hover">
+					<img src="assets/img/img2.jpg" class="card-img-top" alt="...">
+				</div>
 				<div class="card-body text-center">
 					<h5 class="card-title">Horke Pels</h5>
 					<p class="card-text">Head Officer</p>
 				</div>
 			</div>
 			<div class="card mx-3">
-				<img src="assets/img/img4.jpg" class="card-img-top" alt="...">
+				<div class="img-hover">
+					<img src="assets/img/img4.jpg" class="card-img-top" alt="...">
+				</div>
 				<div class="card-body text-center">
 					<h5 class="card-title">Sorden Kalos</h5>
 					<p class="card-text">Supervisor</p>
 				</div>
 			</div>
 			<div class="card mx-3">
-				<img src="assets/img/img3 (1).jpg" class="card-img-top" alt="...">
+				<div class="img-hover">
+					<img src="assets/img/img3 (1).jpg" class="card-img-top" alt="...">
+				</div>
 				<div class="card-body text-center">
 					<h5 class="card-title">Nelson Bam</h5>
 					<p class="card-text">Quality Assurance</p>
 				</div>
 			</div>
 			<div class="card mx-3">
-				<img src="assets/img/img4.jpg" class="card-img-top" alt="...">
+				<div class="img-hover">
+					<img src="assets/img/img4.jpg" class="card-img-top" alt="...">
+				</div>
 				<div class="card-body text-center">
 					<h5 class="card-title">Cacics Coold</h5>
 					<p class="card-text">Asst.Manager</p>
