--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
 	<!-- TOP LOKASI -->
 	<section aria-label="my-top-place" class="top-lokasi">
-		<div>
-			<p>Top Destinations</p>
-			<h1>Explore Top Destinations</h1>
+		<div class="text-center">
+			<h5 class="warnatur-guide">Top Destinations</h5>
+			<h2>Explore <span class="Judultur-guide">Top Destinations</span> </h2>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 				incididunt ut labore.
@@ -69,130 +69,189 @@
 	</section>
 
 	<!-- PAKET TUR -->
-	<section aria-label="my-package" class="paket-tur">
-		<div>
-			<p>Top Pick</p>
-			<h1>Best Tour Packages</h1>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-				incididunt ut labore.
-			</p>
-		</div>
+	<section aria-label="my-package" class="paket-tur ">
+		<div class="container d-flex flex-column">
+			<div>
+				<h5 class="warnatur-guide">Top Pick</h5>
+				<h2>Best <span class="Judultur-guide">Tour Packages</span> </h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+					incididunt ut labore.
+				</p>
+			</div>
 
-		<div class="d-flex gap-3">
-			<div class="card" style="width: 18rem">
-				<img src="assets/img/trending3.jpg" class="card-img-top" alt="..." />
-				<div class="hari d-flex">
-					<i class="fa-solid fa-calendar-days"></i>
-					<h5>9 days Tour</h5>
-				</div>
-				<div class="card-body">
-					<p>Greeee</p>
-					<h5 class="card-title">Santorini,Oia</h5>
-					<div class="bintang d-flex">
-						<div>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
+			<div class="karoselgambar-paket">
+				<div class="px-3">
+					<div class="card">
+						<div class="img-hover">
+							<img src="assets/img/trending3.jpg" class="card-img-top" alt="..." />
 						</div>
-						<p>(38)</p>
-					</div>
-					<p class="card-text">
-						Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					</p>
-
-					<div class="harga d-flex">
-						<h6>$180.00</h6>
-						<p>per person</p>
-					</div>
-				</div>
-			</div>
-			<div class="card" style="width: 18rem">
-				<img src="assets/img/trending4.jpg" class="card-img-top" alt="..." />
-				<div class="hari d-flex">
-					<i class="fa-solid fa-calendar-days"></i>
-					<h5>9 days Tour</h5>
-				</div>
-				<div class="card-body">
-					<p>maldives</p>
-					<h5 class="card-title">Hurawalhi island</h5>
-					<div class="bintang d-flex">
-						<div>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
+						<div class="hari d-flex   align-items-center gap-2 rounded">
+							<i class="fa-solid fa-calendar-days"></i>
+							<h5>9 days Tour</h5>
 						</div>
-						<p>(18)</p>
-					</div>
-					<p class="card-text">
-						Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					</p>
+						<div class="card-body">
+							<h6 class="Judultur-guide">Greeee</h6>
+							<h3 class="card-title">Santorini,Oia</h3>
+							<div class="bintang d-flex align-items-center gap-2 my-3">
+								<div>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+								</div>
+								<p class="m-0">(38)</p>
+							</div>
+							<p class="card-text">
+								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+							</p>
 
-					<div class="harga d-flex">
-						<h6>$260.00</h6>
-						<p>per person</p>
-					</div>
-				</div>
-			</div>
-			<div class="card" style="width: 18rem">
-				<img src="assets/img/2.jpg" class="card-img-top" alt="..." />
-				<div class="hari d-flex">
-					<i class="fa-solid fa-calendar-days"></i>
-					<h5>5 days Tour</h5>
-				</div>
-				<div class="card-body">
-					<p>Greeee</p>
-					<h5 class="card-title">Santorini,Oia</h5>
-					<div class="bintang d-flex">
-						<div>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
-							<span class="fa-solid fa-star"></span>
+							<div class="harga d-flex align-items-center gap-2">
+								<h6 class="m-0 fs-5 fw-bold warna-biru-biasa">$180.00</h6>
+								<p class="m-0"> | per person</p>
+							</div>
 						</div>
-						<p>(18)</p>
-					</div>
-					<p class="card-text">
-						Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-					</p>
-
-					<div class="harga d-flex">
-						<h6>$260.00</h6>
-						<p>per person</p>
 					</div>
 				</div>
-			</div>
 
-		</div>
-		<div class="card" style="width: 18rem;">
-			<img src="assets/img/trending2.jpg" class="card-img-top" alt="...">
-			<div class="hari d-flex">
-				<i class="fa-solid fa-calendar-days"></i>
-				<h5>9 days Tour</h5>
-			</div>
-			<div class="card-body">
-				<p>croatia</p>
-				<h5 class="card-title">Piazza Castello</h5>
-				<div class="bintang d-flex">
-					<div>
-						<span class="fa-solid fa-star"></span>
-						<span class="fa-solid fa-star"></span>
-						<span class="fa-solid fa-star"></span>
-						<span class="fa-solid fa-star"></span>
-						<span class="fa-solid fa-star"></span>
+				<div class="px-3">
+					<div class="card">
+						<div class="img-hover">
+							<img src="assets/img/trending4.jpg" class="card-img-top" alt="..." />
+						</div>
+						<div class="hari d-flex  align-items-center gap-2 rounded">
+							<i class="fa-solid fa-calendar-days"></i>
+							<h5>9 days Tour</h5>
+						</div>
+						<div class="card-body">
+							<h6 class="Judultur-guide">maldives</h6>
+							<h3 class="card-title">Hurawalhi island</h3>
+							<div class="bintang d-flex align-items-center gap-2 my-3">
+								<div>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+								</div>
+								<p class="m-0">(18)</p>
+							</div>
+							<p class="card-text">
+								Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+							</p>
+
+							<div class="harga d-flex align-items-center gap-2">
+								<h6 class="m-0 fs-5 fw-bold warna-biru-biasa">$260.00</h6>
+								<p class="m-0"> | per person</p>
+							</div>
+						</div>
 					</div>
-					<p>(12)</p>
 				</div>
-				<p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
 
-				<div class="harga d-flex">
-					<h6>$170.00</h6>
-					<p>per person</p>
+				<div class="px-3">
+					<div class="card">
+						<div class="img-hover">
+							<img src="assets/img/2.jpg" class="card-img-top" alt="..." />
+						</div>
+						<div class="hari d-flex  align-items-center gap-2 rounded">
+							<i class="fa-solid fa-calendar-days"></i>
+							<h5>5 days Tour</h5>
+						</div>
+						<div class="card-body">
+							<h6 class="Judultur-guide">Greeee</h6>
+							<h3 class="card-title">Santorini,Oia</h5>
+								<div class="bintang d-flex align-items-center gap-2 my-3">
+									<div>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+										<span class="fa-solid fa-star"></span>
+									</div>
+									<p class="m-0">(18)</p>
+								</div>
+								<p class="card-text">
+									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+								</p>
+
+								<div class="harga d-flex align-items-center gap-2">
+									<h6 class="m-0 fs-5 fw-bold warna-biru-biasa">$260.00</h6>
+									<p class="m-0"> | per person</p>
+								</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="px-3">
+					<div class="card">
+						<div class="img-hover">
+							<img src="assets/img/trending2.jpg" class="card-img-top" alt="...">
+						</div>
+						<div class="hari d-flex  align-items-center gap-2 rounded">
+							<i class="fa-solid fa-calendar-days"></i>
+							<h5>9 days Tour</h5>
+						</div>
+						<div class="card-body">
+							<h6 class="Judultur-guide">croatia</h6>
+							<h3 class="card-title">Piazza Castello</h3>
+							<div class="bintang d-flex align-items-center gap-2 my-3">
+								<div>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+									<span class="fa-solid fa-star"></span>
+								</div>
+								<p class="m-0">(12)</p>
+							</div>
+							<p class="card-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+							</p>
+
+							<div class="harga d-flex align-items-center gap-2">
+								<h6 class="m-0 fs-5 fw-bold warna-biru-biasa">$170.00</h6>
+								<p class="m-0"> | per person</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+			<div class="row">
+				<div
+					class="judulkategori col-md-2 d-flex align-items-center justify-content-center text-center rounded">
+					<h3 class="w-75">top categoris</h3>
+				</div>
+				<div class="karoselgambar-icon col-md-10">
+					<div class="kategoricon">
+						<img src="assets/img/004-camping-tent.png" alt="">
+						<p>Camping</p>
+					</div>
+					<div class="kategoricon">
+						<img src="assets/img/003-hiking.png" alt="">
+						<p>Hiking</p>
+					</div>
+					<div class="kategoricon">
+						<img src="assets/img/005-sunbed.png" alt="">
+						<p>Beach Tours</p>
+					</div>
+					<div class="kategoricon">
+						<img src="assets/img/006-surf.png" alt="">
+						<p>Surfing</p>
+					</div>
+					<div class="kategoricon">
+						<img src="assets/img/002-safari.png" alt="">
+						<p>Safari</p>
+					</div>
+					<div class="kategoricon">
+						<img src="assets/img/008-cycling.png" alt="">
+						<p>Cycling</p>
+					</div>
+					<div class="kategoricon">
+						<img src="assets/img/007-hiking-1.png" alt="">
+						<p>Trekings</p>
+					</div>
 				</div>
 			</div>
 		</div>
